syntax = "proto3";

package codehorse.mpaas.ingress;

option go_package = "github.com/solodba/devcloud/mpaas/apps/ingress";

// 导入外部包
import "common/pb/github.com/solodba/mcube/pb/meta/meta.proto";

// CreateIngressRequest结构体
message CreateIngressRequest {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 3;
    // @gotags: bson:"rules" json:"rules"
    repeated IngressRules Rules = 4;
}

// IngressRules结构体
message IngressRules {
    // @gotags: bson:"host" json:"host"
    string Host = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// 通用键值对结构体
message ListMapItem {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// Ingress结构体
message Ingress {
    // @gotags: bson:",inline" json:"meta"
    codehorse.mcube.meta.Meta Meta = 1;
    // @gotags: bson:",inline" json:"ingress"
    CreateIngressRequest Ingress = 2;
}

// IngressListItem结构体
message IngressSetItem {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"hosts" json:"hosts"
    string Hosts = 3;
    // @gotags: bson:"age" json:"age"
    int64 Age = 4;
}

// IngressSet结构体
message IngressSet {
    // @gotags: bson:"total" json:"total"
    int64 Total = 1;
    // @gotags: bson:"items" json:"items"
    repeated IngressSetItem Items = 2;
}